# dota-info

./: Cargo.toml  README.md
client/: README.md  package-lock.json  package.json
client/public/: index.html  manifest.json
client/src/: HeroTable.css  HeroTable.css.map  HeroTable.sass  HeroTable.tsx  heroService.tsx
client/src/components/: App.tsx  HeroTable.tsx  TableHeader.tsx
client/src/css/: HeroTable.css  HeroTable.css.map  HeroTable.sass
client/src/services/: heroService.tsx
client/src/utilities/: objectUtility.ts
server/: Cargo.toml
server/src/: main.rs  open_dota_api.rs
src/: hero.rs  main.rs
